data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectBranchTargetResolution_3899.wast
;; 8. **Test Description:**    Formulate a `call_indirect` instruction targeting a function with inline function calls and branching with `br` instructions across these calls. Verify the correct branch targets by maintaining a clear stack trace and ensure no erroneous jumps indicate Incorrect Branch Target Resolution.

(assert_invalid
  (module
    (type (func (param i32) (result f64)))
    (type (func (param f64) (result i32)))
    (func $target_func (param f64) (result i32)
      (i32.const 42)
    )
    (func $caller_func (param i32) (result f64)
      (call_indirect (type 1) (f64.const 3.14) 
        (br 0))
      (f64.const 0)
    )
    (table funcref (elem $target_func))
    (func (export "main")
      (call $caller_func (i32.const 1))
    )
  )
  "type mismatch"
)